--- a/js-jasmine/package.json
+++ b/js-jasmine/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Gilded Rose kata in Javascript with Jasmine",
   "scripts": {
-    "test": "jasmine"
+    "test": "jasmine spec/gilded_rose_spec.js"
   },
   "repository": {
     "type": "git",
@@ -23,8 +23,7 @@
   "devDependencies": {
     "@babel/core": "^7.14.0",
     "@babel/preset-env": "7.14.0",
-    "@babel/register": "^7.13.0",
-    "jasmine": "^3.7.0"
+    "@babel/register": "^7.13.0"
   },
   "babel": {
     "presets": [
@@ -38,5 +37,8 @@
       ]
     ],
     "plugins": []
+  },
+  "dependencies": {
+    "jasmine": "^5.1.0"
   }
 }
